<resources>
    <string name="app_name">Menu_DZ_20</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_close">Close Drawer</string>
    <string name="drawer_open">Open Drawer</string>

    <string name="calculate">Calculate</string>
    <string name="calculate_price">Calculate Price</string>
    <string name="reset">Reset</string>
    <string name="enter_weigth">Enter Weight</string>
    <string name="enter_price">Enter Price</string>
    <string name="price_per_kg">Price per kg</string>


    <!--массив названий городов-->
    <string-array name="citys">

        <item>Вологда</item>
        <item>Череповец</item>
        <item>Кириллов</item>
        <item>Великий Устюг</item>
        <item>Грязовец</item>

    </string-array>

    <!--массив фактов для городов-->
    <string-array name="citys_description">

        <item>Основание: Основана предположительно в 1147 году.
Происхождение названия: Название реки Вологды.
“Резной палисад”: Известна своей деревянной архитектурой, особенно резными палисадами, за что получила неофициальное название “Резной палисад”.
Вологодское кружево: Славится вологодским кружевом - традиционным русским народным промыслом.
Масло: Родина знаменитого вологодского масла.
Расположение: Расположена на реке Вологде, в европейской части России.
Музеи: В городе много музеев, включая Вологодский государственный историко-архитектурный и художественный музей-заповедник.
Население: Около 300 тысяч человек (оценка).
Транспортный узел: Важный транспортный узел.
Связанные исторические личности: С Вологдой связаны имена многих известных людей, в том числе писателя Варлама Шаламова.</item>
        <item>Основание: Основан в 1362 году как Череповецкий Воскресенский монастырь.
Название: Название, вероятно, происходит от финно-угорского слова, обозначающего холм или возвышенность.
Металлургический центр: Крупнейший центр чёрной металлургии в России (ЧерМК).
“Город металлургов”: Часто называют “городом металлургов”.
Расположение: Вологодская область, на берегу Рыбинского водохранилища.
Речной порт: Важный речной порт.
Население: Один из крупнейших городов Вологодской области, около 300 тысяч человек.
Промышленность: Помимо металлургии, развита химическая и машиностроительная промышленность.
История: Развитие города связано с индустриализацией в советское время.
Урбанизированный город: Современный город с развитой инфраструктурой.</item>
        <item>Основание: Основан в 1397 году святым Кириллом Белозерским.
Кирилло-Белозерский монастырь: Главная достопримечательность - Кирилло-Белозерский монастырь, один из крупнейших и наиболее хорошо сохранившихся монастырей России.
Туризм: Основной источник дохода - туризм, привлекаемый историческим и культурным наследием.
Расположение: Вологодская область, на берегу Сиверского озера.
Население: Небольшой город, около 7 тысяч человек.
История: Был важным религиозным и культурным центром в средние века.
Музей-заповедник: Кирилло-Белозерский монастырь является музеем-заповедником.
Деревянная архитектура: Сохранилась историческая деревянная архитектура.
Фрески: В монастыре сохранились старинные фрески.
Живописное место: Расположен в живописном месте с красивыми озерами и лесами.</item>
        <item>Основание: Основан в XII веке.
Родина Деда Мороза: Официально считается родиной Деда Мороза.
Расположение: Вологодская область, в месте слияния рек Сухоны и Юга.
Население: Около 30 тысяч человек.
Народные промыслы: Известен своими народными промыслами, такими как чернение по серебру, резьба по бересте и плетение из бересты.
Туризм: Развит туризм, особенно в зимнее время, благодаря статусу родины Деда Мороза.
Архитектура: Сохранилась историческая архитектура, включая церкви и купеческие дома.
Речной порт: Ранее был важным речным портом.
Зимняя сказка: Превращается в зимнюю сказку во время новогодних праздников.
Музеи: В городе есть несколько музеев, посвященных истории и культуре края.</item>
        <item>Основание: Первое упоминание относится к XVI веку.
Название: Предположительно происходит от “грязи”, из-за особенностей местности.
Расположение: Вологодская область, на реке Ржавке.
Население: Небольшой город, около 15 тысяч человек.
Железнодорожный узел: Важный железнодорожный узел на линии Москва — Архангельск.
Промышленность: В основном связан с обслуживанием железнодорожного транспорта и деревообработкой.
История: Развитие города связано с строительством железной дороги.
Сельское хозяйство: В окрестностях развито сельское хозяйство.
Архитектура: Сохранилась провинциальная архитектура.
Природа: Окружен лесами и полями.</item>

    </string-array>
</resources>